# id-gen

./: Cargo.toml
src/: main.rs
