[package]
name = "id-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.6", features = ["derive"] }
serde = "1.0.171"
thiserror = "1.0.31"
ulid = "0.6.0"
uuid = { version = "1.4.0", features = ["v4", "serde"] }
